GNOME Bugzilla – Bug 695350
gnome-xkb-info: Don't store duplicated layouts in locale tables
Last modified: 2013-03-14 13:29:39 UTC
The fix in commit b3e4aef wasn't totally correct.
Created attachment 238277 [details] [review] gnome-xkb-info: Don't store duplicated layouts in locale tables We can't store duplicated layouts anywhere since those get destroyed when the 'layout' element ends and we'd end up with invalid entries potentially leading to crashes when used. Just doing a g_hash_table_remove() on the layouts_by_* tables was a thinko and could never work since those only contain other tables as values and it's in this second level tables that the layouts are stored.
Review of attachment 238277 [details] [review]: Sure.
Attachment 238277 [details] pushed as 886a568 - gnome-xkb-info: Don't store duplicated layouts in locale tables